@@ -282,7 +282,7 @@ show_header('Uploading Rules');
 
 			<li id="r2.2.9"><a href="#h2.2"><strong>&uarr;_</strong></a> <a href="#r2.2.9">2.2.9.</a> <strong>Higher bitrate CBR (Constant Bitrate) and ABR (Average Bitrate) torrents replace lower ones.</strong> Once a CBR (Constant Bitrate) rip has been uploaded, no CBR rips of that bitrate or lower can be uploaded. In the same manner, once an ABR (Average Bitrate) rip has been uploaded, no ABR rips of that bitrate or lower can be uploaded. For example, if a 320kbps CBR rip is already on the site, you are not allowed to upload a 256kbps CBR. ABR and CBR may be interchangeably trumped. A CBR can trump a lower bitrate ABR and an ABR may trump a lower bitrate CBR. You may not upload a 192kbps CBR if a 256kbps ABR of the same release is already up. 
 			</li>
-			<li id="r2.2.10"><a href="#h2.2"><strong>&uarr;_</strong></a> <a href="#r2.2.10">2.2.10.</a> <strong>Lossy format torrents with .log files do not replace equivalent existing torrents.</strong> If you want to upload a lossy format (e.g. MP3, Ogg Vorbis, AAC, etc.) with a log that already exists in the same medium and edition, you may not replace the current lossy torrent. For example, a -V2 (VBR) MP3 torrent with a log cannot replace a -V2 (VBR) without a log. Same applies for lossy audio torrents with .m3u, .cue, and other additions such as artwork. <u>Exceptions</u>: If an existing torrent contains encode/rip errors, you may upload another copy without errors. The bad torrent needs to be reported or yours will be deleted as a dupe. Also, <a href="#r2.3.8">see rules 2.3.8 through 2.3.15</a> for replacing badly named and tagged torrents.
+			<li id="r2.2.10"><a href="#h2.2"><strong>&uarr;_</strong></a> <a href="#r2.2.10">2.2.10.</a> <strong>Lossy format torrents with .log files do not replace equivalent existing torrents.</strong> If you want to upload a lossy format (e.g. MP3, Ogg Vorbis, AAC, etc.) with a log that already exists in the same medium and edition, you may not replace the current lossy torrent. For example, a -V2 (VBR) MP3 torrent with a log cannot replace a -V2 (VBR) without a log. Same applies for lossy audio torrents with .m3u, .cue, and other additions such as artwork. <u>Exceptions</u>: If an existing torrent contains encode/rip errors, you may upload another copy without errors. The bad torrent needs to be reported or yours will be deleted as a dupe. Also, <a href="#r2.3.8">see rules 2.3.8 through 2.3.16</a> for replacing badly named and tagged torrents.
 			</li>
 
 			<li id="r2.2.11"><a href="#r2.2.11k"><strong>&uarr;_</strong></a> <a href="#r2.2.11">2.2.11.</a> <strong>Vinyl Specific Dupe Rules</strong>
@@ -387,11 +387,13 @@ show_header('Uploading Rules');
 			</li>
 			<li id="r2.3.9"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.9">2.3.9.</a> <strong>All lossless soundboard recordings must include clear information about source lineage.</strong> This information should be displayed in the torrent description. Optionally, the uploader may include the information in a .txt or .log file within the torrent. Lossless soundboard recordings missing lineage information will be deleted if reported.
 			</li>
-			<li id="r2.3.10"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.10">2.3.10.</a> <strong>Including track numbers of each song in the file names (e.g. "01 - TrackName.mp3") is highly recommended.</strong> If a torrent without track numbers in the file names is uploaded, then a torrent with the track numbers can take its place. <strong>Exception: Track numbers are not required for single-track torrents.</strong>
+			<li id="r2.3.10"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.10">2.3.10.</a> <strong>File names must accurately reflect the song titles</strong>. You may not have file names like 01track.mp3, 02track.mp3, etc. File names with incorrect song titles can be trumped by properly labeled torrents. Note that these must be substantial improvements such as the removal of garbage characters. Small changes such as diacritical marks are insufficient grounds for trumping. English translations of song titles in file names are encouraged, but not necessary for foreign language song titles. <u>Exceptions</u>: Rare albums featuring no track listing or untitled tracks may have file names like 01track.mp3, 02track.mp3, and so forth. Please note this tracklist in the <em>Album description</em>. If foreign language characters create playback problems for some systems or cannot be coherently translated, file names such as "01track" is acceptable for those few cases.
 			</li>
-			<li id="r2.3.11"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.11">2.3.11.</a> <strong>Multiple-disc torrents cannot have tracks with the same numbers in one directory.</strong> Tracks cannot contain duplicate track numbers in the same directory. You may either place the tracks for each disc in a separate directory or number the tracks successively. You may place all the tracks for Disc One in one directory and all the tracks for Disc Two in another directory. If you prefer to use one directory for all the audio files, you must use successive numbering. Successive numbering may consist of the following (as illustrated with examples). Disc One has 15 tracks and Disc Two has 20. You may either number tracks in Disc One as #01-#15, and those of Disc Two as #16-#35 in the same directory. Or you may add a Disc number before the track numbers, such that the numbers are #1 06 for Disc One Track 06, and #2 03 for Disc 2 Track 03, and so forth. That way the track numbers will not be duplicated across multiple discs.
+			<li id="r2.3.11"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.11">2.3.11.</a> <strong>Including track numbers of each song in the file names (e.g. "01 - TrackName.mp3") is highly recommended.</strong> If a torrent without track numbers in the file names is uploaded, then a torrent with the track numbers can take its place. <strong>Exception: Track numbers are not required for single-track torrents.</strong>
 			</li>
-			<li id="r2.3.12"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.12">2.3.12.</a> <strong>Properly tag your music files.</strong> Certain meta tags (e.g. ID3, Vorbis) are required on all music uploads. Make sure to use the proper format tags for your files (e.g. no ID3 tags for FLAC &ndash; see rule <a href="#r2.2.15.8">2.2.15.8</a>). ID3v2 tags for files are highly recommended over ID3v1. If you upload an album missing one or more of these tags, then another user may add the tags, re-upload, and report yours for deletion. The required tags are:
+			<li id="r2.3.12"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.12">2.3.12.</a> <strong>Multiple-disc torrents cannot have tracks with the same numbers in one directory.</strong> Tracks cannot contain duplicate track numbers in the same directory. You may either place the tracks for each disc in a separate directory or number the tracks successively. You may place all the tracks for Disc One in one directory and all the tracks for Disc Two in another directory. If you prefer to use one directory for all the audio files, you must use successive numbering. Successive numbering may consist of the following (as illustrated with examples). Disc One has 15 tracks and Disc Two has 20. You may either number tracks in Disc One as #01-#15, and those of Disc Two as #16-#35 in the same directory. Or you may add a Disc number before the track numbers, such that the numbers are #1 06 for Disc One Track 06, and #2 03 for Disc 2 Track 03, and so forth. That way the track numbers will not be duplicated across multiple discs.
+			</li>
+			<li id="r2.3.13"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.13">2.3.13.</a> <strong>Properly tag your music files.</strong> Certain meta tags (e.g. ID3, Vorbis) are required on all music uploads. Make sure to use the proper format tags for your files (e.g. no ID3 tags for FLAC &ndash; see rule <a href="#r2.2.15.8">2.2.15.8</a>). ID3v2 tags for files are highly recommended over ID3v1. If you upload an album missing one or more of these tags, then another user may add the tags, re-upload, and report yours for deletion. The required tags are:
 				<ul>
 
 					<li>Artist</li>
@@ -402,12 +404,12 @@ show_header('Uploading Rules');
 				<p><em>Note: The "Year" tag is optional, but strongly encouraged. However, if missing or incorrect, is not grounds for trumping a torrent.</em></p>
 
 			</li>
-			<li id="r2.3.13"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.13">2.3.13.</a> <strong>The torrent artist for classical works should use the full composer name.</strong> Use the composer for "Artist" unless the album is a recital or contains works by several composers. Do not add the conductor or performer(s) to the composer's name as artist - you may add him/her/them at the end of the album title, though, in order to make it easier to distinguish between different recordings of the "same" work.
+			<li id="r2.3.14"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.14">2.3.14.</a> <strong>The torrent artist for classical works should use the full composer name.</strong> Use the composer for "Artist" unless the album is a recital or contains works by several composers. Do not add the conductor or performer(s) to the composer's name as artist - you may add him/her/them at the end of the album title, though, in order to make it easier to distinguish between different recordings of the "same" work.
 			</li>
-			<li id="r2.3.14"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.14">2.3.14.</a> <strong>Newly re-tagged torrents trumping badly tagged torrents must reflect a substantial improvement over the previous tags.</strong> Small changes that include replacing ASCII characters with proper foreign language characters with diacritical marks, fixing slight misspellings, or missing an alternate spelling of an artist (e.g. excluding "The" before a band name) are insufficient grounds for replacing other torrents. You may trump a release if the tags do not follow the data from a reputable music cataloging service such as <a href="http://musicbrainz.org/">Musicbrainz</a> or <a href="http://www.discogs.com/">Discogs</a>. In case of conflict between reputable listings, either tagged version is equally preferred to the site and cannot trump the other. For example, an album is tagged differently in Musicbrainz and in Discogs. Either style of tagging is permitted; neither is "better" than the other. In that case, any newly tagged torrents replacing an already properly tagged torrent, which follows good tagging convention, will result in a dupe. <u>Exceptions</u>: Classical music has no easy tagging standard due to the incompatibilities with ID3 tag formats and classical meta data. Those may follow any standard as long as the tags are reasonable (i.e. not cut off, not misspelled beyond a few simple errors, not overly ambiguous, or uninformative). If you are not sure, you may follow guidelines at sites such as <a href="http://wiki.musicbrainz.org/ClassicalStyleGuide">MusicBrainz</a>, <a href="http://www.hydrogenaudio.org/forums/index.php?showtopic=70059">HydrogenAudio</a>, <a href="http://www.macworld.com/article/43791/2005/03/tagclass.html">this article</a>, or <a href="http://www.tunequest.org/on-classical-music-tagging-for-itunes-and-ipod/20060530/">this article</a>. <em>Note: <a href="http://wiki.musicbrainz.org/ClassicalStyleGuide">The MusicBrainz guide for classical tagging</a> may result in overly long tags, file names, and folder names. Some OSes (notably Windows), cannot read long folder and file names. It is advised to use it with ID3v2 and other tags that support long track names. However, use caution when naming the folders and files themselves.</em>
+			<li id="r2.3.15"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.15">2.3.15.</a> <strong>Newly re-tagged torrents trumping badly tagged torrents must reflect a substantial improvement over the previous tags.</strong> Small changes that include replacing ASCII characters with proper foreign language characters with diacritical marks, fixing slight misspellings, or missing an alternate spelling of an artist (e.g. excluding "The" before a band name) are insufficient grounds for replacing other torrents. You may trump a release if the tags do not follow the data from a reputable music cataloging service such as <a href="http://musicbrainz.org/">Musicbrainz</a> or <a href="http://www.discogs.com/">Discogs</a>. In case of conflict between reputable listings, either tagged version is equally preferred to the site and cannot trump the other. For example, an album is tagged differently in Musicbrainz and in Discogs. Either style of tagging is permitted; neither is "better" than the other. In that case, any newly tagged torrents replacing an already properly tagged torrent, which follows good tagging convention, will result in a dupe. <u>Exceptions</u>: Classical music has no easy tagging standard due to the incompatibilities with ID3 tag formats and classical meta data. Those may follow any standard as long as the tags are reasonable (i.e. not cut off, not misspelled beyond a few simple errors, not overly ambiguous, or uninformative). If you are not sure, you may follow guidelines at sites such as <a href="http://wiki.musicbrainz.org/ClassicalStyleGuide">MusicBrainz</a>, <a href="http://www.hydrogenaudio.org/forums/index.php?showtopic=70059">HydrogenAudio</a>, <a href="http://www.macworld.com/article/43791/2005/03/tagclass.html">this article</a>, or <a href="http://www.tunequest.org/on-classical-music-tagging-for-itunes-and-ipod/20060530/">this article</a>. <em>Note: <a href="http://wiki.musicbrainz.org/ClassicalStyleGuide">The MusicBrainz guide for classical tagging</a> may result in overly long tags, file names, and folder names. Some OSes (notably Windows), cannot read long folder and file names. It is advised to use it with ID3v2 and other tags that support long track names. However, use caution when naming the folders and files themselves.</em>
 
 			</li>
-			<li id="r2.3.15"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.15">2.3.15.</a> <strong>Avoid embedding large images if including cover art in meta tags.</strong> Do not embed large images (in excess of ~256 KB) in file meta tags. It adds unnecessary bloat to the files. Include the artwork in a separate directory if too big or hi-res. If someone reports your torrent for large embedded artwork, it will be deleted.
+			<li id="r2.3.16"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.16">2.3.16.</a> <strong>Avoid embedding large images if including cover art in meta tags.</strong> Do not embed large images (in excess of ~256 KB) in file meta tags. It adds unnecessary bloat to the files. Include the artwork in a separate directory if too big or hi-res. If someone reports your torrent for large embedded artwork, it will be deleted.
 			</li>
 		</ul>
 	</div>
